[package]
name = "load_balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83" 
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.60"
features = ["console"]